--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -7,182 +7,199 @@
     android:orientation="vertical"
     tools:context="com.ev.jonathan.emprendeelvieajeev.Inicio">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         tools:context="com.ev.jonathan.ev_emprendeelviaje.Inicio">
 
-        <ImageView
-            android:id="@+id/imageView"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="217dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:src="@drawable/portada"
-            android:visibility="visible" />
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical"
             tools:context="com.ev.jonathan.ev_emprendeelviaje.Inicio">
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:baselineAligned="false"
-                android:text="BIENVENIDO A \nEMPRENDE EL VIAJE\nEV"
-                android:textAlignment="center"
-                android:textAllCaps="true"
-                android:textColor="@color/colorAccent"
-                android:textSize="24sp"
-                android:textStyle="bold|italic"
-                android:visibility="visible" />
 
-            <TextView
-                android:id="@+id/textView2"
+            <RelativeLayout
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="fill_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_weight="1"
+                    android:src="@drawable/portada"
+                    android:visibility="visible" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    tools:context="com.ev.jonathan.ev_emprendeelviaje.Inicio">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/textView3"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentStart="true"
+                                android:layout_alignParentTop="true"
+                                android:baselineAligned="false"
+                                android:text="BIENVENIDO A\n\n \nEMPRENDE EL VIAJE\nEV"
+                                android:textAlignment="center"
+                                android:textAllCaps="true"
+                                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                                android:textSize="24sp"
+                                android:textStyle="bold|italic"
+                                android:visibility="visible" />
+
+                            <TextView
+                                android:id="@+id/textView2"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_alignBottom="@+id/imageView"
+                                android:layout_alignParentStart="true"
+                                android:text="\nLa app que te acompaña en tus viajes y \n hace mas facil tu vida"
+                                android:textAlignment="center"
+                                android:textAllCaps="false"
+                                android:textColor="?attr/colorPrimaryDark"
+                                android:textSize="14sp"
+                                android:textStyle="bold|italic" />
+                        </LinearLayout>
+
+                    </RelativeLayout>
+
+                </LinearLayout>
+
+            </RelativeLayout>
+
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/imageView"
-                android:layout_alignParentStart="true"
-                android:text="La app que te acompaña en tus viajes y \n hace mas facil tu vida"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textColor="@color/common_plus_signin_btn_text_light_default"
-                android:textSize="14sp"
-                android:textStyle="bold|italic" />
-        </LinearLayout>
-    </RelativeLayout>
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        tools:context="com.ev.jonathan.ev_emprendeelviaje.Inicio">
-
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal"
-            tools:context="com.ev.jonathan.ev_emprendeelviaje.Inicio">
-
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="188dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical"
-                tools:context="com.ev.jonathan.ev_emprendeelviaje.Inicio">
-
-                <Button
-                    android:id="@+id/btn_inicio_info"
-                    style="@style/Widget.AppCompat.Button.Colored"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorPrimaryDark"
-                    android:gravity="center"
-                    android:text="Mi \n  Informacion  "
-                    android:textAlignment="center"
-                    android:visibility="visible" />
-
-            </LinearLayout>
-
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="188dp"
-                android:layout_height="130dp"
-                android:gravity="center"
-                android:orientation="vertical"
-                tools:context="com.ev.jonathan.ev_emprendeelviaje.Inicio">
-
-                <Button
-                    android:id="@+id/btn_inicio_ubi"
-                    style="@style/Widget.AppCompat.Button.Colored"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorPrimaryDark"
-                    android:gravity="center"
-                    android:text="Mi \n    ubicación    "
-                    android:textAlignment="center"
-                    android:visibility="visible" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal"
-            tools:context="com.ev.jonathan.emprendeelvieajeev.Inicio">
-
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="188dp"
-                android:layout_height="130dp"
-                android:gravity="center"
-                android:orientation="vertical"
-                tools:context="com.ev.jonathan.ev_emprendeelviaje.Inicio">
-
-                <Button
-                    android:id="@+id/btn_inicio_lugarturis"
-                    style="@style/Widget.AppCompat.Button.Colored"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorPrimaryDark"
-                    android:gravity="center"
-
-                    android:text="Lugares\n    Turisticos    "
-                    android:textAlignment="center"
-                    android:visibility="visible" />
-
-            </LinearLayout>
-
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="188dp"
-                android:layout_height="match_parent"
                 android:gravity="center"
                 android:orientation="horizontal"
                 tools:context="com.ev.jonathan.ev_emprendeelviaje.Inicio">
 
-                <Button
-                    android:id="@+id/btn_ini_acercade"
-                    style="@style/Widget.AppCompat.Button.Colored"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorPrimaryDark"
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:layout_width="188dp"
+                    android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="   Acerca de    \nEV"
-                    android:textAlignment="center"
-                    android:visibility="visible" />
+                    android:orientation="vertical"
+                    tools:context="com.ev.jonathan.ev_emprendeelviaje.Inicio">
+
+                    <Button
+                        android:id="@+id/btn_inicio_info"
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@color/colorPrimaryDark"
+                        android:gravity="center"
+                        android:text="Mi \n  Informacion  "
+                        android:textAlignment="center"
+                        android:visibility="visible" />
+
+                </LinearLayout>
+
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:layout_width="188dp"
+                    android:layout_height="120dp"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    tools:context="com.ev.jonathan.ev_emprendeelviaje.Inicio">
+
+                    <Button
+                        android:id="@+id/btn_inicio_ubi"
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@color/colorPrimaryDark"
+                        android:gravity="center"
+                        android:text="Mi \n    ubicación    "
+                        android:textAlignment="center"
+                        android:visibility="visible" />
+
+                </LinearLayout>
 
             </LinearLayout>
+
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                tools:context="com.ev.jonathan.ev_emprendeelviaje.Inicio">
+
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:layout_width="188dp"
+                    android:layout_height="130dp"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    tools:context="com.ev.jonathan.ev_emprendeelviaje.Inicio">
+
+                    <Button
+                        android:id="@+id/btn_inicio_lugarturis"
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@color/colorPrimaryDark"
+                        android:gravity="center"
+
+                        android:text="Lugares\n    Turisticos    "
+                        android:textAlignment="center"
+                        android:visibility="visible" />
+
+                </LinearLayout>
+
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:layout_width="188dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    tools:context="com.ev.jonathan.ev_emprendeelviaje.Inicio">
+
+                    <Button
+                        android:id="@+id/btn_ini_acercade"
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@color/colorPrimaryDark"
+                        android:gravity="center"
+                        android:text="   Acerca de    \nEV"
+                        android:textAlignment="center"
+                        android:visibility="visible" />
+
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+
+    </RelativeLayout>
 
 </LinearLayout>
 
